@@ -59,6 +59,8 @@ Changes
   * Removes deprecated ProgressMeter (Issue #2739)
   * Removes deprecated MDAnalysis.units.N_Avogadro (PR #2737)
   * Dropped Python 2 support
+  * Changes the minimal NumPy version to 1.16.0 (Issue #2827, PR #2831)
+  * Sets the minimal RDKit version for CI to 2020.03.1 (Issue #2827, PR #2831)
 
 Deprecations
 
